--- a/greeting-service/application-prod.yml
+++ b/greeting-service/application-prod.yml
@@ -7,5 +7,5 @@ management:
       exposure:
         include: '*'
 greeting-service:
-  greeting: "Cia"
+  greeting: "Pronto"
   default-value: "Mondo"
